Changed some colors, changed background image for phone. Added tel link for phone, updated services, added direct link to a.r.e covers page. Fixed phone number. Seperated map from contacts section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,3 @@
-/**
-* Template Name: Gp - v4.2.0
-* Template URL: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -415,12 +408,28 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero h1 {
+  
   margin: 0;
   font-size: 56px;
   font-weight: 700;
   line-height: 64px;
   color: #fff;
   font-family: "Poppins", sans-serif;
+  text-transform: uppercase;
+  /* text-shadow: 1px 1px 1px #919191,
+    1px 2px 1px #919191,
+    1px 3px 1px #919191,
+    1px 4px 1px #919191,
+    1px 5px 1px #919191,
+    1px 6px 1px #919191,
+    1px 7px 1px #919191,
+    1px 8px 1px #919191,
+    1px 9px 1px #919191,
+    1px 10px 1px #919191,
+    1px 18px 6px rgba(16, 16, 16, 0.4),
+    1px 22px 10px rgba(16, 16, 16, 0.2),
+    1px 25px 35px rgba(16, 16, 16, 0.2),
+    1px 30px 60px rgba(16, 16, 16, 0.4); */
 }
 
 #hero h1 span {
@@ -618,7 +627,7 @@ section {
 .features .icon-box i {
   font-size: 48px;
   float: left;
-  color: #ffc451;
+  color: #ac2424;
 }
 
 .features .icon-box p {
@@ -633,6 +642,7 @@ section {
   background-size: cover;
   min-height: 400px;
 }
+
 
 /*--------------------------------------------------------------
 # Services
@@ -695,7 +705,7 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.5)), url("../img/cta-bg.jpg") fixed center center;
+  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.5)), url("../img/cta_bg.jpg") fixed center center;
   background-size: cover;
   padding: 60px 0;
 }
